@@ -68,10 +68,11 @@ $name = "network";
 $version = "@VERSION@";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
               "redhat-7.2", "redhat-8.0", "redhat-9",
-              "openna-1.0",              
+              "openna-1.0",
               "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1", "mandrake-9.2",
               "mandrake-10.0", "mandrake-10.1",
-              "debian-2.2", "debian-3.0", "debian-sarge",              
+              "blackpanther-4.0",
+              "debian-2.2", "debian-3.0", "debian-sarge",
               "suse-7.0", "suse-9.0",
               "turbolinux-7.0", "fedora-1", "fedora-2",
               "pld-1.0", "pld-1.1", "pld-1.99",
