@@ -268,6 +268,7 @@ sub gst_network_get_broadcast_ping_cmd
        "mandrake-9.2" => "debian-2.2",
        "mandrake-10.0" => "debian-2.2",
        "mandrake-10.1" => "redhat-6.2",
+       "blackpanther-4.0" => "debian-2.2",
        "suse-7.0"     => "debian-2.2",
        "suse-9.0"     => "redhat-6.2",
        "suse-9.1"     => "redhat-6.2",
@@ -1424,6 +1425,7 @@ sub gst_network_get_file
 		"mandrake-9.2" => \&gst_network_rh62_get_file,
     "mandrake-10.0" => \&gst_network_rh62_get_file,
     "mandrake-10.1" => \&gst_network_rh62_get_file,
+    "blackpanther-4.0" => \&gst_network_rh62_get_file,
  		"conectiva-9"  => \&gst_network_rh62_get_file,
  		"conectiva-10" => \&gst_network_rh62_get_file,
     "debian-2.2"   => \&gst_network_deb22_get_file,
@@ -3370,6 +3372,7 @@ sub gst_network_ensure_loopback_interface
 	  "mandrake-9.2" => "lo",
     "mandrake-10.0" => "lo",
     "mandrake-10.1" => "lo",
+    "blackpanther-4.0" => "lo",
  	  "conectiva-9"  => "lo",
     "conectiva-10" => "lo",
 	  "debian-2.2"   => "lo",
@@ -3489,6 +3492,7 @@ sub gst_network_get_parse_table
     "mandrake-9.2" => "redhat-7.0",
     "mandrake-10.0" => "redhat-7.0",
     "mandrake-10.1" => "redhat-7.0",
+    "blackpanther-4.0" => "redhat-7.0",
     "conectiva-9"  => "redhat-7.0", 
     "conectiva-10" => "redhat-7.0", 
     "debian-2.2"   => "debian-2.2",
@@ -3896,6 +3900,7 @@ sub gst_network_get_interface_parse_table
     "mandrake-9.2" => "mandrake-9.0",
     "mandrake-10.0" => "mandrake-9.0",
     "mandrake-10.1" => "mandrake-9.0",
+    "blackpanther-4.0" => "mandrake-9.0",
     "conectiva-9"  => "conectiva-9",
     "conectiva-10" => "conectiva-9",
     "debian-2.2"   => "debian-2.2",
@@ -4573,6 +4578,7 @@ sub gst_network_get_replace_table
 	  "mandrake-9.2" => "redhat-7.0",
     "mandrake-10.0" => "redhat-7.0",
     "mandrake-10.1" => "redhat-7.0",
+    "blackpanther-4.0" => "redhat-7.0",
  	  "conectiva-9"  => "redhat-7.0",
  	  "conectiva-10" => "redhat-7.0",
     "debian-2.2"   => "debian-2.2",
@@ -4967,6 +4973,7 @@ sub gst_network_get_interface_replace_table
     "mandrake-9.2" => "mandrake-9.0",
     "mandrake-10.0" => "mandrake-9.0",
     "mandrake-10.1" => "mandrake-9.0",
+    "blackpanther-4.0" => "mandrake-9.0",
     "conectiva-9"  => "conectiva-9",
     "conectiva-10" => "conectiva-9",
     "debian-2.2"   => "debian-2.2",
