@@ -68,6 +68,8 @@ sub gst_service_sysv_get_paths
        "mandrake-10.0" => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
        "mandrake-10.1" => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
 
+       "blackpanther-4.0" => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
+
        "conectiva-9"  => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
        "conectiva-10" => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
 
@@ -119,6 +121,8 @@ sub gst_service_sysv_get_runlevels
        "mandrake-9.2"   => [3, 5],
        "mandrake-10.0"  => [3, 5],
        "mandrake-10.1"  => [3, 5],
+
+       "blackpanther-4.0" => [3, 5],
 
        "conectiva-9"    => [3, 5],
        "conectiva-10"   => [3, 5],
@@ -172,6 +176,8 @@ sub gst_service_get_verbose_runlevels
      "mandrake-10.0"  => "redhat-5.2",
      "mandrake-10.1"  => "redhat-5.2",
      
+     "blackpanther-4.0" => "redhat-5.2",
+
      "conectiva-9"    => "redhat-5.2",
      "conectiva-10"   => "redhat-5.2",
      
