@@ -1,3 +1,9 @@
+2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
+	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in:
+	  Added support for Blackpanther Linux 4.0, I think that it's from
+	  Karoly Barcza <kbarcza@blackpanther.hu>
+
 2004-07-18  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
 	* platform.pl.in: man, I'd swear that I tested the last commit. fixed
